infra/k8s/dev/ingress-srv.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  defaultBackend:
    service:
      name: expenses-srv
      port:
        number: 80
  rules:
    - host: localhost     
      http:
        paths:
          - path: /expense
            pathType: Prefix
            backend:
              service:
                name: expenses-srv
                port: 
                    number: 80
